--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".BlankFragment">
+        tools:context=".ui.fragment.BlankFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
