--- a/app/src/main/res/layout/item_explore.xml
+++ b/app/src/main/res/layout/item_explore.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="photo"
-            type="com.example.api.FlickrResult.Photos.Photo" />
+            type="com.example.api.model.FlickrResult.Photos.Photo" />
 
     </data>
 
