--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
         <item name="android:padding">0dp</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-<!--        <item name="android:windowCloseOnTouchOutside">false</item>-->
+        <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
 </resources>
