--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -11,9 +11,7 @@
         tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_imageDetailFragment"
-            app:destination="@id/imageDetailFragment"
-            app:enterAnim="@anim/anim_bottom_to_top"
-            app:exitAnim="@anim/anim_bottom_to_top" />
+            app:destination="@id/imageDetailFragment" />
     </fragment>
     <dialog
         android:id="@+id/imageDetailFragment"
