--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="FullScreenDialog" parent="Theme.AppCompat.Light.Dialog">
-<!--        <item name="android:backgroundDimEnabled">false</item>-->
+        <!--        <item name="android:backgroundDimEnabled">false</item>-->
         <item name="android:windowNoTitle">true</item>
         <item name="android:padding">0dp</item>
         <item name="android:windowIsFloating">false</item>
@@ -22,4 +23,10 @@
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
+
+    <style name="DialogAnimation" parent="Animation.AppCompat.Dialog">
+        <item name="android:windowEnterAnimation">@anim/anim_bottom_to_top</item>
+        <item name="android:windowExitAnimation">@anim/anim_top_to_bottom</item>
+        <item name="android:windowHideAnimation">@anim/anim_top_to_bottom</item>
+    </style>
 </resources>
