--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,9 +24,8 @@
     </style>
 
 
-    <style name="DialogAnimation" parent="Animation.AppCompat.Dialog">
+    <style name="WindowAnimationSlideVertical" >
         <item name="android:windowEnterAnimation">@anim/anim_bottom_to_top</item>
         <item name="android:windowExitAnimation">@anim/anim_top_to_bottom</item>
-        <item name="android:windowHideAnimation">@anim/anim_top_to_bottom</item>
     </style>
 </resources>
